// Copyright 2018 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/struct.proto";

package istio.service.v1;

option go_package = "istio.io/istio/galley/pkg/api";

message ServiceConfig {
    string name = 1;

    repeated Rule rules = 2;

    repeated InstanceDecl instances = 3;

    repeated Handler handlers = 4;
}

message Rule {
    string match = 1;

    repeated Action actions = 2;
}

message Action {
    string handler = 1;

    repeated Instance instances = 3;
}

message Instance {
    string ref = 1;

    string template = 2;
    google.protobuf.Struct params = 3;
}

message InstanceDecl {
    string name = 1;

    string template = 2;
    google.protobuf.Struct params = 3;
}

message Handler {
    string name = 1;
}
